[tool.poetry]
name = "pytube"
version = "0.1.0"
description = ""
authors = ["Lucifer516-sudoer <harishvengatachalam02092005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
